restructure the whole website

--- a/index.html
+++ b/index.html
@@ -1,81 +1,4 @@
 ---
-layout: splash
-author_profile: false
+layout: home
+permalink: /
 ---
-
-<section class="home-hero">
-  <p class="home-kicker">Personal Knowledge and Creative Practice</p>
-  <h1>Psychology, Visual Storytelling, and Creative Growth</h1>
-  <p class="home-lead">
-    I turn psychology podcast episodes and books into actionable notes, and document creative work across video editing, color grading, and photography.
-  </p>
-  <div class="home-cta">
-    <a class="btn btn--primary" href="{{ '/podcast-notes/' | relative_url }}">Read Podcast Notes</a>
-    <a class="btn btn--inverse" href="{{ '/about/' | relative_url }}">About Me</a>
-  </div>
-</section>
-
-<section class="home-featured">
-  <div class="home-section-head">
-    <h2>Featured Podcast Notes</h2>
-    <a href="{{ '/podcast-notes/' | relative_url }}">View All</a>
-  </div>
-  <div class="home-topic-pills">
-    <a href="{{ '/podcast-topics/#emotions' | relative_url }}">Emotions</a>
-    <a href="{{ '/podcast-topics/#relationships' | relative_url }}">Relationships</a>
-    <a href="{{ '/podcast-topics/#cognition' | relative_url }}">Cognition</a>
-    <a href="{{ '/podcast-topics/#growth' | relative_url }}">Growth</a>
-  </div>
-  <div class="home-note-grid">
-    {% assign recent_podcast_notes = site.podcast_notes | sort: 'date' | reverse %}
-    {% if recent_podcast_notes.size > 0 %}
-      {% for note in recent_podcast_notes limit:3 %}
-        <article class="home-note-card">
-          <h3><a href="{{ note.url | relative_url }}">{{ note.title }}</a></h3>
-          {% if note.excerpt %}
-          <p>{{ note.excerpt }}</p>
-          {% endif %}
-          <ul>
-            <li><strong>Show:</strong> {{ note.podcast_show | default: "Unknown" }}</li>
-            <li><strong>Episode:</strong> {{ note.episode_number | default: "N/A" }}</li>
-            <li><strong>Topics:</strong> {{ note.topics | join: ", " | default: "N/A" }}</li>
-          </ul>
-        </article>
-      {% endfor %}
-    {% else %}
-      <article class="home-note-card">
-        <h3>Start with your first note</h3>
-        <p>No podcast notes are published yet. Use <code>_podcast_notes/TEMPLATE.md</code> as your structure.</p>
-      </article>
-    {% endif %}
-  </div>
-</section>
-
-<section class="home-sections">
-  <div class="home-section-head">
-    <h2>Explore Sections</h2>
-  </div>
-  <div class="home-section-grid">
-    <article class="home-section-card">
-      <h3>Creative Works</h3>
-      <p>Video editing, color grading, and photography projects.</p>
-      <a class="btn btn--primary" href="{{ '/creative-works/' | relative_url }}">View All</a>
-    </article>
-    <article class="home-section-card">
-      <h3>Reading Notes</h3>
-      <p>Psychology book summaries, key concepts, and practical applications.</p>
-      <a class="btn btn--primary" href="{{ '/reading-notes/' | relative_url }}">View All</a>
-    </article>
-    <article class="home-section-card">
-      <h3>VFX Learning</h3>
-      <p>Archive of my computer graphics experiments and shader learning journey.</p>
-      <a class="btn btn--primary" href="{{ '/vfx-learning/' | relative_url }}">View All</a>
-    </article>
-  </div>
-</section>
-
-<section class="home-footer-links">
-  <a href="{{ '/podcast-shows/' | relative_url }}">Browse by Show</a>
-  <a href="{{ '/podcast-topics/' | relative_url }}">Browse by Topic</a>
-  <a href="{{ '/about/' | relative_url }}">About</a>
-</section>
